--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "Abhijit Mondal",
   "license": "ISC",
   "dependencies": {
+    "debug": "^4.3.2",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "joi": "^17.4.1",
+    "mongoose": "^5.13.3"
   }
 }
